db and API added

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,8 @@
 PORT=4000
+
+MONGO_DB_URL=mongodb+srv://gevorgabgaryan2024:<password>@cluster0.i7idy35.mongodb.net
+# MONGO_DB_URL=mongodb://localhost:47047
+MONGO_DB_NAME=EXPRESS_APP
+
+MAIL_EMAIL=email
+MAIL_PASSWORD=app_password
