--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node -r @babel/register index.js",
     "dev": "nodemon -r @babel/register index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "node -r @babel/register seed.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@babel/core": "^7.23.9",
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "migrate-mongo": "^11.0.0",
     "nodemon": "^3.0.3"
   },
   "babel": {
