--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
