add order service

--- a/.env-example
+++ b/.env-example
@@ -8,3 +8,10 @@ MAIL_EMAIL=email
 MAIL_PASSWORD=app_password
 
 REDIS_PORT=8389
+
+MYSQL_HOST=localhost
+MYSQL_PORT=5306
+MYSQL_DB_NAME=online_shop
+MYSQL_USERNAME=gevorg
+MYSQL_PASSWORD=passord
+MYSQL_ROOT_PASSWORD=root
